update add data by row